--- a/examples.html
+++ b/examples.html
@@ -47,14 +47,15 @@
         <h3>Example:</h3>
         <p>In New York City public schools, ChatGPT was initially banned due to fears of misuse and educational disruption. One of the reasons cited for this ban was that "the tool may be able to provide quick and easy answers to questions, it's does not could critical-thinking and problem-solving skills, which are essential for academic and lifelong success"(Yang, 2023). However, in 2023, the school districts began to reverse the ban and began exploring structured classroom use, emphasizing the need to teach students how to engage with AI ethically and productively. The reason credited for the reversal was that the AI tools like ChatGPT are here to stay and it is imperative that we teach students how to utilize such tools because these tools will be incorporated in their future careers (Klein, 2024). As such, to ensure lifelong success for students, it is crucial to teach students the importance of AI literacy and how to ethically use the tool (Klein, 2024). This shift underscores how schools that currently ban the usage must rethink digital literacy education. Klein also suggests that we need to better prepare educators to detect AI usage/plagiarism (Klein, 2024). </p>
    <div style="width: 560px; height: 315px; margin: 20px 0 20px auto;">
-        <iframe 
-            width="560" 
-            height="315" 
-            src="https://www.youtube.com/watch?v=MF9_fsJEP1s" 
-            frameborder="0" 
-            allow="autoplay; encrypted-media" 
-            allowfullscreen>
-        </iframe>
+            <iframe 
+    width="560" 
+    height="315" 
+    src="https://www.youtube.com/embed/MF9_fsJEP1s" 
+    frameborder="0" 
+    allow="autoplay; encrypted-media" 
+    allowfullscreen>
+            </iframe>
+
     </div>
     </section>
 
