--- a/examples.html
+++ b/examples.html
@@ -50,13 +50,14 @@
         <p>This video explores how ChatGPT is transforming the educational landscape by providing instant answers, explanations, and personalized assistance to students. It discusses the potential benefits and challenges of integrating AI into learning environments.</p>
         <div style="width: 560px; height: 315px; margin: 20px 0 20px auto;">
       <iframe 
-    width="560" 
-    height="315" 
-    src="https://www.youtube.com/watch?v=MF9_fsJEP1s" 
-    frameborder="0" 
-    allow="autoplay; encrypted-media" 
-    allowfullscreen>
+  width="560" 
+  height="315" 
+  src="https://www.youtube.com/embed/MF9_fsJEP1s" 
+  frameborder="0" 
+  allow="autoplay; encrypted-media" 
+  allowfullscreen>
 </iframe>
+
 
     </div>
     </section>
@@ -85,14 +86,15 @@
         <br>
         <p>This video delves into the evolving role of artificial intelligence in mental health care, examining how tools like ChatGPT are being utilized for support. It highlights both the opportunities and limitations of AI in providing mental health assistance</p>
         <div style="width: 560px; height: 315px; margin: 20px 0 20px auto;">
-        <iframe 
-    width="560" 
-    height="315" 
-    src="https://www.youtube.com/watch?v=F6EaCUaPtMw" 
-    frameborder="0" 
-    allow="autoplay; encrypted-media" 
-    allowfullscreen>
+<iframe 
+  width="560" 
+  height="315" 
+  src="https://www.youtube.com/embed/F6EaCUaPtMw" 
+  frameborder="0" 
+  allow="autoplay; encrypted-media" 
+  allowfullscreen>
 </iframe>
+
 
     </div>
     </section>
