--- a/stakeholders.html
+++ b/stakeholders.html
@@ -13,6 +13,7 @@
 
     <nav>
         <ul>
+            <li><a href="home.html">Home</a></li>
             <li><a href="index.html">Introduction</a></li>
             <li><a href="examples.html">Real World Examples</a></li>
             <li><a href="ethical-anylsis.html">Ethics</a></li>
