--- a/home.html
+++ b/home.html
@@ -1,19 +1,83 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ChatGPT Project Introduction</title>
+    <title>Home - ChatGPT Project</title>
     <link rel="stylesheet" href="css/style.css">
-</head>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            background-color: #f5f5f5;
+            margin: 0;
+            padding: 0;
+        }
 
+        header {
+            background-color: #333;
+            color: white;
+            padding: 20px 0;
+        }
+
+        nav {
+            background-color: #444;
+            padding: 10px 0;
+        }
+
+        nav ul {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+        }
+
+        nav a {
+            color: white;
+            text-decoration: none;
+            font-weight: bold;
+        }
+
+        nav a:hover {
+            text-decoration: underline;
+        }
+
+        h1, h2 {
+            margin: 10px 0;
+        }
+
+        .slideshow-container {
+            position: relative;
+            max-width: 600px;
+            margin: 30px auto;
+        }
+
+        .slides {
+            display: none;
+            width: 100%;
+            height: auto;
+            border-radius: 8px;
+        }
+
+        footer {
+            margin-top: 40px;
+            padding: 10px;
+            background-color: #333;
+            color: white;
+        }
+    </style>
+</head>
 <body>
     <header>
-        <h1>Home Page</h1>
+        <h1>ChatGPT Project</h1>
+        <h2>By Abem, Umer, and Omer</h2>
     </header>
 
     <nav>
         <ul>
+            
             <li><a href="home.html">Home</a></li>
             <li><a href="index.html">Introduction</a></li>
             <li><a href="examples.html">Real World Examples</a></li>
@@ -22,54 +86,32 @@
             <li><a href="citations.html">Sources</a></li>
         </ul>
     </nav>
-   <a href="https://studiodeltadesigns.com/introduction-to-chatgpt/" target="_blank">
-  <img src="images/chatgpt-intro.png" alt="Introducing ChatGPT" style="float: right; width: 400px; height: auto; margin: 20px;">
-</a>
 
-</a>
+    <div class="slideshow-container">
+        <img class="slides" src="images/image1.jpg" alt="Slide 1">
+        <img class="slides" src="images/image2.jpg" alt="Slide 2">
+        <img class="slides" src="images/image3.jpg" alt="Slide 3">
+    </div>
 
-    <main>
-        <section>
-            <h2> What Is Our Target Technology?</h2>
-            <p>Our team chose ChatGPT, a cutting edge language model developed by OpenAI. ChatGPT is a form of Generative AI, specifically designed to understand and generate human like text. It belongs to a family of models called GPT (Generative Pre-trained Transformer), with the most recent versions demonstrating powerful capabilities in natural language understanding, conversation, content creation, summarization, and even coding.</p>
-            <p>Powered by deep learning and trained on vast datasets from books, websites, and other text sources, ChatGPT can carry out contextual dialogues, generate articles, write code, and more, all with astonishing coherence and fluidity.</p>
-            <p>It is capable of generating human-like responses across a wide range of tasks including:</p>
-            <ul> 
-                <li>Conversational interaction</li>
-                <li>Code generation and debugging</li>
-                <li>Summarization</li>
-                <li>Creative writing</li>
-                <li>Decision support</li>
-            </ul>
-            <br>
-            <h2>Why It Matters:</h2>
-            <p>ChatGPT is redefining communication, education, and automation at an unprecedented scale. As one of the fastest adopted AI tools in history, it has sparked both excitement and concern about how we interact with technology.</p>
-        </section>
-
-        <section>
-            <h2>Application Domains of ChatGPT.</h2>
-            <p>We selected ChatGPT because it sits at the center of a technological and ethical revolution. Since its public release in late 2022, ChatGPT has transformed industries including:</p>
-            <ul>
-                <li><strong>Education</strong> (homework help, tutoring, plagiarism concerns), <strong> Challenges: </strong> Increased risk of plagiarism, Reduced critical thinking. Unequal access to AI tools</li>
-                <li><strong>Business</strong> (customer service, content writing, decision support),<strong>Challenges: </strong>Replaces human jobs, AI-generated content may lack accountability, Miscommunication or lack of empathy</li>
-                <li><strong>Healthcare</strong> (medical advice, mental health apps),<strong>Challenges: </strong> Ethical issues with diagnosis and mental health reliance , Lack of certified medical oversight</li>
-                <li><strong>Software development</strong> (code generation, debugging assistance),<strong>Challenges: </strong> May produce incorrect or inefficient code, Risks of overeliance in professional environments</li>
-                <li><strong>Media</strong> (AI journalism, storytelling, and creative writing), <strong>Challenges: </strong>Potential spread of misinformation, Undermining human creativity and authorship</li>
-            </ul>
-            <p>The pace at which ChatGPT has been adopted is unmatched—but it also raises deep ethical questions:</p>
-            <ul>
-                <li>How should society respond to jobs potentially displaced by AI?</li>
-                <li>What responsibilities do developers have when releasing powerful AI tools?</li>
-                <li>How do we address bias, misinformation, or misuse?</li>
-            </ul>
-            <p>These questions and their real world implications make ChatGPT the perfect focus for a critical ethical discussion.</p>
-            <br><br>
-            <p><strong>The YouTube video below is a 12-minute CNBC segment that explains what ChatGPT is and why it is such a big deal and a major part of our future.</strong></p>
-        </section>
-    </main>
     <footer>
-        <p>&copy;IT-304 Final Project</p>
+        <p>&copy; IT-304 Final Project</p>
     </footer>
 
+    <script>
+        let slideIndex = 0;
+        const slides = document.getElementsByClassName("slides");
+
+        function showSlides() {
+            for (let i = 0; i < slides.length; i++) {
+                slides[i].style.display = "none";
+            }
+            slideIndex++;
+            if (slideIndex > slides.length) slideIndex = 1;
+            slides[slideIndex - 1].style.display = "block";
+            setTimeout(showSlides, 3000); 
+        }
+
+        showSlides();
+    </script>
 </body>
 </html>
