--- a/home.html
+++ b/home.html
@@ -88,9 +88,9 @@
     </nav>
 
     <div class="slideshow-container">
-        <img class="slides" src="images/image1.jpg" alt="Slide 1">
-        <img class="slides" src="images/image2.jpg" alt="Slide 2">
-        <img class="slides" src="images/image3.jpg" alt="Slide 3">
+        <img class="slides" src="images/GPT-image1.png" alt="Slide 1">
+        <img class="slides" src="images/GPT-image2.png" alt="Slide 2">
+        <img class="slides" src="images/GPT-image3.png" alt="Slide 3">
     </div>
 
     <footer>
