--- a/home.html
+++ b/home.html
@@ -15,14 +15,13 @@
         }
 
         header {
-            background-color: #333;
+            background-color: #004080;
             color: white;
-            padding: 20px 0;
+            padding: 20px;
         }
 
         nav {
-            background-color: #444;
-            padding: 10px 0;
+            background-color: #003060;
         }
 
         nav ul {
@@ -31,7 +30,11 @@
             padding: 0;
             display: flex;
             justify-content: center;
-            gap: 20px;
+            gap: 30px;
+        }
+
+        nav ul li {
+            margin: 0 15px;
         }
 
         nav a {
@@ -62,10 +65,11 @@
         }
 
         footer {
+            text-align: center;
             margin-top: 40px;
             padding: 10px;
-            background-color: #333;
-            color: white;
+            background-color: #ddd;
+            color: #000;
         }
     </style>
 </head>
