--- a/home.html
+++ b/home.html
@@ -97,6 +97,9 @@
         <img class="slides" src="images/GPT-image3.png" alt="Slide 3">
     </div>
 
+    <h2>Chat GPT</h2>
+    <p>ChatGPT is a big part of our daily lives as people use it for work, school and other daily activites to help them solves problems in their lives.</p>
+
     <footer>
         <p>&copy; IT-304 Final Project</p>
     </footer>
