--- a/home.html
+++ b/home.html
@@ -98,7 +98,7 @@
     </div>
 
     <h2>Chat GPT</h2>
-    <p>ChatGPT is a big part of our daily lives as people use it for work, school and other daily activites to help them solves problems in their lives.</p>
+    <p>ChatGPT is a big part of our daily lives as people use it for work, school and other daily activites to help them solve problems in their lives.</p>
 
     <footer>
         <p>&copy; IT-304 Final Project</p>
