--- a/citations.html
+++ b/citations.html
@@ -89,6 +89,11 @@
 
 <li>PRO Robots. (2024, Dec 8). <i>How ChatGPT Is Changing the Approach to Mental Health Support | New Technology</i> [Video]. YouTube. (<a href="https://www.youtube.com/watch?v=F6EaCUaPtMw" target="_blank">https://www.youtube.com/watch?v=F6EaCUaPtMw</a>)</li>
 
+<li>Beacon Innovation. (n.d.). <i>Open AI’s Chat GPT: A closer look at the revolutionary chatbot</i>. (<a href="https://beaconinnovation.org/open-ais-chat-gpt-a-closer-look-at-the-revolutionary-chatbot/" target="_blank">https://beaconinnovation.org/open-ais-chat-gpt-a-closer-look-at-the-revolutionary-chatbot/</a>)</li>
+
+<li>The Health Partnership (THP). (n.d.). <i>What is ChatGPT?</i> (<a href="https://www.thp.co.uk/what-is-chat-gpt/" target="_blank">https://www.thp.co.uk/what-is-chat-gpt/</a>)</li>
+
+<li>KIRevolution. (n.d.). <i>ChatGPT: Everything you need to know</i>. (<a href="https://kirevolution.com/chat-gpt" target="_blank">https://kirevolution.com/chat-gpt</a>)</li>
 
     </ul>
 
