--- a/home.html
+++ b/home.html
@@ -58,11 +58,14 @@
         }
 
         .slides {
-            display: none;
-            width: 100%;
-            height: auto;
-            border-radius: 8px;
-        }
+    display: none;
+    width: 100%;
+    max-width: 600px;
+    height: 400px;
+    object-fit: cover;
+    border-radius: 8px;
+}
+
 
         .prev, .next {
             cursor: pointer;
