--- a/home.html
+++ b/home.html
@@ -115,7 +115,7 @@
 <body>
     <header>
         <h1>ChatGPT Project</h1>
-        <h2>By: Abem, Umer, and Omer</h2>
+        <h2>By: Abem, Umer, Omar and Talha </h2>
     </header>
 
     <nav>
